# expert-rotary-phone

./: .clang-format  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .prettierignore  .wiswa.jsonnet  BUILD.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  HANDOFF.md  Info.plist.in  LICENSE.txt  MISSING.md  NEON_ACCURACY.md  PATCHES.md  PROGRESS.md  README.md  STUBS.md  package.json  repack-ipa.sh
.claude/: auto-continue.md
.claude/agents/: regen.md
.claude/rules/: c-cpp-objc.md
.claude/skills/ci/: SKILL.md
.claude/skills/make-release/: SKILL.md
.github/workflows/: build.yml  codeql.yml  pages.yml  release.yml
Project/: AcViewerCategoryCell.h  AcViewerCategoryCell.mm  AcViewerCategoryViewController.h  AcViewerCategoryViewController.mm  AcViewerDetailCell.h  AcViewerDetailCell.m  AcViewerHiSpeedViewController.h  AcViewerHiSpeedViewController.mm  AcViewerHidSudViewController.h  AcViewerHidSudViewController.mm  AcViewerMusicCell.h  AcViewerMusicCell.m  AcViewerMusicCell.mm  AcViewerMusicViewController.h  AcViewerMusicViewController.mm  AcViewerOptionCell.h  AcViewerOptionCell.m  AcViewerOptionViewController.h  AcViewerOptionViewController.mm  AcViewerPopKunViewController.h  AcViewerPopKunViewController.mm  AcViewerRanMirViewController.h  AcViewerRanMirViewController.mm  AcViewerSplitViewController.h  AcViewerSplitViewController.mm  AcceptPolicyViewController.h  AcceptPolicyViewController.mm  AppDelegate.h  AppDelegate.mm  AppFont.h  AppFont.m  BirthDayViewController.h  BirthDayViewController.mm  CDataScanner.h  CDataScanner.m  CJSONDataSerializer.h  CJSONDataSerializer.m  CJSONDeserializer.h  CJSONDeserializer.m  CJSONScanner.h  (+302 more)
Project/.audit/scratch/: _index.txt  allcellsready.txt  ctor_dtor.txt  highlight.txt  infopanel.txt  maintask_update.txt  maintask_update_pretty.txt  setup.txt  stopandsave.txt  updatelist.txt
Project/Game/: CMakeLists.txt
Project/Game/Data/: CMakeLists.txt
Project/Game/Data/Chara/: CMakeLists.txt  CharaData.h  CharaData.mm  CharaInfo.h  CharaInfo.m  CharaManager.h  CharaManager.mm  LimitedCharaInfo.h  LimitedCharaInfo.m  PreferredCharaInfo.h  PreferredCharaInfo.m  SkillData.cpp  SkillData.h  SkillData.mm
Project/Game/Data/Music/: AcMusicData.h  AcMusicData.m  CMakeLists.txt  MusicData.h  MusicData.m  MusicManager.h  MusicManager.m  MusicPatch.h  MusicPatch.m
Project/Game/Data/Save/: ArcadeScoreData+Store.h  ArcadeScoreData+Store.m  ArcadeScoreData.h  ArcadeScoreData.m  CMakeLists.txt  CharaTicketData+Store.h  CharaTicketData+Store.m  CharaTicketData.h  CharaTicketData.m  OverScoreData+Store.h  OverScoreData+Store.m  OverScoreData.h  OverScoreData.m  ScoreData+Store.h  ScoreData+Store.m  ScoreData.h  ScoreData.m  TreasureData+Store.h  TreasureData+Store.m  TreasureData.h  TreasureData.m  TreasureTmpData.h  UserSettingData.h  UserSettingData.mm
Project/Game/Data/TreasureMap/: CMakeLists.txt  TreasureMap.h  TreasureMap.mm
Project/Game/Note/: AcNoteMng.h  AcNoteMng.mm  CMakeLists.txt  NoteMng.h  NoteMng.mm  PlayJudge.h  PlayJudge.mm
Project/Game/Purchase/: CMakeLists.txt  PurchaseManager.h  PurchaseManager.m  PurchaseTransactionCache.h  PurchaseTransactionCache.m
Project/Game/Util/: CMakeLists.txt  Random.cpp  Random.h  TwitterUtil.h  TwitterUtil.m  TwitterUtil.mm
Project/System/: CMakeLists.txt
Project/System/src/: CMakeLists.txt  SystemHardware.h  SystemHardware.m  neEngineBridge.h  neEngineBridge.mm
Project/System/src/Aep/: AepFrameDraw.h  AepFrameDraw.mm  AepLyrCtrl.h  AepLyrCtrl.mm  AepManager.h  AepManager.mm  AepOrderingTable.h  AepOrderingTable.mm  CMakeLists.txt
Project/System/src/OpenGL/: CMakeLists.txt  neGLES11.cpp  neGLES11.h
Project/System/src/Render/: AepTexture.cpp  AepTexture.h  AepTexture.mm  CMakeLists.txt  C_RENDER.cpp  C_RENDER.h  C_SINGLE_SPRITE.cpp  C_SINGLE_SPRITE.h  C_TEXTURE.h  C_TEXTURE.mm  neDebugLog.h  neGLView.h  neGLView.mm  neGraphics.cpp  neGraphics.h  neRenderer.cpp  neRenderer.h  neTextTexture.h  neTextTexture.mm  neTextureForiOS.cpp  neTextureForiOS.h  neTextureRef.cpp  neTextureRef.h
Project/System/src/Sound/: AVBus.h  AVBus.mm  AudioManager.h  AudioManager.mm  CAComponent.h  CAComponent.mm  CASound.h  CASound.mm  CMakeLists.txt  SeInstance.h  neAVCAPlayer.h  neAVCAPlayer.mm  neAVSePlayer.h  neAVSePlayer.mm
Project/System/src/Task/: AcMainTask.h  AcMainTask.mm  AcViewerTask.h  AcViewerTask.mm  BootLogoTask.h  BootLogoTask.mm  CMakeLists.txt  C_TASK.cpp  C_TASK.h  C_TASK.mm  MainTask.h  MainTask.mm  MenuMainTask.h  MenuMainTask.mm  PlayResultTask.h  PlayResultTask.mm  PlayScene.mm  PlayScore.mm  PlayTask.h  PlayTask.mm  TaskFactory.h  TaskFactory.mm  TitleTask.h  TitleTask.mm
Project/System/src/Util/: BFCodec.h  BFCodec.m  CMakeLists.txt  NSData+Crypt.h  NSData+Crypt.m  RhCrypto.c  RhCrypto.h  RhUtil.h  RhUtil.m  bf_init_bytes.inc  neFrameTimer.h
Stubs/: RewardNetwork.h
theos/: Makefile  Makefile.in  control  control.in
theos/Resources/: Info.plist
tools/: chr_dump.py  coredata_dump.py  extract_sugoroku_dialogue.py  gen_progress.py  idx_dump.py  map_dump.py  repack_ipa.py  sheet_dump.py  strings_dump.py
